[package]
name = "orderly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.10.1"
futures = "0.3.30"
indicatif = "0.17.7"
log = "0.4.20"
prost = "0.12.3"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tonic = "0.10.2"
tungstenite = "0.21.0"
url = "2.2.2"

[[bin]]
name = "orderly-server"
path = "src/main.rs"

[[bin]]
name = "orderly-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.10.2"